# csad2526KI404MaksymFedyna25

./: CMakeLists.txt  README.md  ci.bat  ci.sh  math_operations.cpp  math_operations.h
.github/workflows/: ci.yml
lab2_apks_25/: baud_rate_generator.vhd  baud_rate_generator.vhd~  baud_rate_generator_summary.html  fuseRelaunch.cmd  lab2_apks_25.gise  lab2_apks_25.xise  pepExtractor.prj  uart_rx.vhd  uart_rx_stx_beh.prj  uart_rx_summary.html  uart_testbench.vhd  uart_testbench_beh.prj  uart_testbench_isim_beh.wdb  uart_testbench_stx_beh.prj  uart_tx.vhd  uart_tx_stx_beh.prj
lab2_apks_25/_xmsgs/: pn_parser.xmsgs
lab2_apks_25/iseconfig/: baud_rate_generator.xreport  lab2_apks_25.projectmgr  uart_rx.xreport
lab2_apks_25/isim/: isim_usage_statistics.html
lab2_apks_25/isim/precompiled.exe.sim/ieee/: p_1242562249.didat  p_2592010699.didat
lab2_apks_25/isim/temp/: baud_rate_generator.vdb  uart_rx.vdb  uart_testbench.vdb  uart_tx.vdb
lab2_apks_25/isim/uart_testbench_isim_beh.exe.sim/: ISimEngine-DesignHierarchy.dbg
lab2_apks_25/isim/uart_testbench_isim_beh.exe.sim/tmp_save/: _1
lab2_apks_25/isim/uart_testbench_isim_beh.exe.sim/work/: a_1613415923_2372691052.c  a_1613415923_2372691052.didat  a_1777810118_3212880686.c  a_1777810118_3212880686.didat  a_2793894988_3212880686.c  a_2793894988_3212880686.didat  uart_testbench_isim_beh.exe_main.c
lab2_apks_25/isim/work/: baud_rate_generator.vdb  uart_rx.vdb  uart_testbench.vdb
tests/: unit_tests.cpp
